feat(counselor): introduce CounselorMapper and enhance counselor management with advanced DTO mapping, validation, filtering, soft delete, and audit logging
- Add CounselorMapper interface using MapStruct for clean, maintainable entity-to-DTO and DTO-to-entity conversions
  • Map specialization string to enum safely within mapping
  • Support list mapping from Counselor entities to CounselorResponse DTOs
- Refactor CounselorService to leverage CounselorMapper for response generation and request handling
- Implement advanced CRUD operations including:
  • Adding counselors with automatic code generation and duplicate prevention by email/phone
  • Updating counselors with conflict detection and validation
  • Soft delete with full archiving of counselors and their notes, preserving audit trail and IP metadata
- Extend CounselorRepository with dynamic filtering, search by query, and retrieval methods for active and visible counselors
- Employ Criteria API in CounselorRepositoryImpl for robust, flexible filtering based on complex CounselorFilterRequest criteria
- Enhance CounselorRequest DTO with detailed validation annotations, including @Email, @Pattern, @Past, and conversion of availableDays to list of strings
- Refactor BaseEntity and CounselorBase to support soft deletion with deletedAt timestamp and default column values, and reduce boilerplate via Lombok annotations
- Implement audit logging throughout all counselor lifecycle operations with detailed context such as performedBy user and IP address
- Add pagination support and methods to retrieve counselor statistics for total, active, and retired counts
- Ensure robust exception handling and clear error messages across all service methods for better maintainability and user feedback